# otus

./: .gitignore  LICENSE  README.md
.github/workflows/: c-cpp.yml
cpp_basic/: Makefile
cpp_basic/hw_11/: CMakeLists.txt  interface.h  linked.cpp  main.cpp  sequence.cpp
cpp_basic/hw_11/src/: interface.h  linked.hpp  sequence.hpp
cpp_basic/hw_13/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_containers.cpp
cpp_basic/hw_2/: CMakeLists.txt  example.cpp  example.h  hello_world.cpp  move_me_out.cpp  move_me_out.h
cpp_basic/hw_27/: CMakeLists.txt  topk_words.cpp  topk_words_33395_60de8b-283624-5021a7.cpp  topk_words_original.cpp
cpp_basic/hw_5/: CMakeLists.txt  argument.cpp  argument.h  check_value.cpp  check_value.h  high_scores.cpp  high_scores.h  high_scores.txt  main.cpp  random_value.cpp  random_value.h
cpp_basic/hw_8/: CMakeLists.txt  README.md
cpp_basic/hw_8/include/: add.hpp  astnode.hpp  div.hpp  lexer.hpp  mul.hpp  number.hpp  parser.hpp  sub.hpp  variable.hpp
cpp_basic/hw_8/src/: astnode.cpp  lexer.cpp  main.cpp  parser.cpp
cpp_basic/hw_9/: CMakeLists.txt  interface.h  main.cpp  stat.cpp
cpp_basic/lect_11/: CMakeLists.txt  complex_value.cpp  complex_value_copy.cpp  convertion.cpp  destructors.cpp  explicit.cpp  move.cpp  virtual_destructor.cpp
cpp_basic/lect_13/examples/: CMakeLists.txt
cpp_basic/lect_13/examples/src/: list.hpp
cpp_basic/lect_13/examples/test/: test_assertions.cpp  test_fixtures.cpp  test_mocks.cpp
cpp_basic/lect_13/project_gtest_by_cmake/: CMakeLists.txt  CMakeLists.txt.in
cpp_basic/lect_13/project_gtest_by_cmake/src/: list.hpp
cpp_basic/lect_13/project_gtest_by_cmake/test/: test_list.cpp
cpp_basic/lect_13/project_prebuilt_gtest/: CMakeLists.txt
cpp_basic/lect_13/project_with_gtest/: CMakeLists.txt
cpp_basic/lect_13/project_with_gtest/src/: list.hpp  main.cpp
cpp_basic/lect_21/: .clang-format  .clang-tidy  CMakeLists.txt  buffer_example.cpp  dangling_ptr.cpp  dangling_ref.cpp  memory_leak.cpp  memory_leak_fixed.cpp  shared_ptr_example.cpp  shared_ptr_recursion.cpp  smart_ptr.hpp  smart_ptr_example.cpp  strategy.hpp  unique_ptr_example.cpp  weak_ptr_example.cpp
cpp_basic/lect_22/: CMakeLists.txt  copy_and_swap.cpp  ex_safety_basic_guarantee.cpp  ex_safety_example.cpp  ex_safety_strong_guarantee.cpp  gcd.cpp  gcd_dispatch_except.cpp  gcd_err_code.cpp  gcd_err_handling.cpp  gcd_err_out.cpp  gcd_exceptions.cpp
cpp_basic/lect_22/source/: CMakeLists.txt  console_header.hpp  error_codes_advanced.cpp  error_codes_basics.cpp  error_codes_classes.cpp  exceptions_advanced.cpp  exceptions_basics.cpp  exceptions_std.cpp  exceptions_usage.cpp
cpp_basic/lect_23/: 1_switch.cpp  2_count_primes.cpp  3_thread_guard.cpp  4_1_savefile_bg.cpp  4_2_savefile_bg_cref.cpp  4_3_savefile_bg_capture.cpp  5_parallel_modification.cpp  CMakeLists.txt
cpp_basic/lect_24/: CMakeLists.txt  ex1_tickets.cpp  ex1_tickets.guard.cpp  ex1_tickets.mutex.cpp  ex2_bank.cpp  ex2_bank.fixed.cpp
cpp_basic/lect_25/: CMakeLists.txt  condition.cpp  join_deadlock.cpp  linked_list.cpp  monitor_object.cpp  naive_thread_safe_linked_list.cpp  waiting_queue.cpp
cpp_basic/lect_26/: CMakeLists.txt  async.cpp  count_lines.cpp  count_primes.cpp  future_wait.cpp  package_task.cpp  promise.cpp  promise_ex.cpp  shared_future.cpp
cpp_basic/lect_27/: CMakeLists.txt  bench_par_stl.cpp  foo.h  logger.cpp  logger.h  thread_local.cpp  tickets.cpp
cpp_basic/lect_28/: CMakeLists.txt  copy_and_swap.cpp  copy_on_write.cpp  crtp.cpp  empty_base.cpp  scope_guard.cpp
cpp_basic/lect_3/: CMakeLists.txt  lec03_01_type_ranges_int.cpp  lec03_02_type_ranges_float.cpp  lec03_03_cin_cout.cpp  lec03_04_arithm_operations.cpp  lec03_05_bool_logic.cpp  lec03_06_if.cpp  lec03_07_switch.cpp  lec03_08_while_do_loop.cpp  lec03_09_for_loop.cpp  lec03_10_file_io.cpp  lec03_xx_cast_int_float.cpp
cpp_basic/lect_30/: CMakeLists.txt  mixin.cpp  self_assignment.cpp  shared_from_this.cpp  singleton.cpp  virtual_ctor.cpp
cpp_basic/lect_30/pimpl/: CMakeLists.txt
cpp_basic/lect_30/pimpl/details/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h
cpp_basic/lect_30/pimpl/motivation/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h
cpp_basic/lect_30/pimpl/solution/: CMakeLists.txt  main.cpp  my_class.cpp  my_class.h
cpp_basic/lect_4/: CMakeLists.txt  args.cpp  capitalize.cpp  fib.cpp  gcd.cpp  gcd_cin.cpp  hanoi.cpp  hello.cpp  minigrep.cpp  module.cpp  pow.cpp  swap.cpp  swap_naive.cpp
cpp_basic/lect_4/additional/: invx.cpp  sqreq.cpp
